--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,6 +16,9 @@ android {
       proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
     }
   }
+  dataBinding {
+    enabled = true
+  }
 }
 
 dependencies {
@@ -23,10 +26,11 @@ dependencies {
   implementation 'com.android.support:appcompat-v7:27.1.1'
   implementation 'com.android.support.constraint:constraint-layout:1.1.2'
   implementation 'com.android.support:support-v4:27.1.1'
+  implementation 'android.arch.lifecycle:extensions:1.1.1'
   testImplementation 'junit:junit:4.12'
   androidTestImplementation 'com.android.support.test:runner:1.0.2'
   androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
   implementation 'android.arch.navigation:navigation-fragment:1.0.0-alpha02'
   implementation 'android.arch.navigation:navigation-ui:1.0.0-alpha02'
-
+  androidTestImplementation "android.arch.navigation:navigation-testing:1.0.0-alpha02"
 }
